--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_compile_options(-ftime-report -Wall -Wextra)
-# add_compile_options(-O0 -g)
+add_compile_options(-O0 -g)
 
 # dependencies
 find_package(TgBotStater REQUIRED)
