--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,15 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v3
         
+        - name: Setup C++ tools
+          uses: aminya/setup-cpp@v1
+          with:
+            compiler: clang
+            compiler_version: '19'
+            clangtidy: true
+            clangformat: true
+            cmake: true
+        
         - name: Cache Conan dependencies
           uses: actions/cache@v3
           id: conan-cache
@@ -20,7 +29,7 @@ jobs:
             path: |
               ~/.conan2
               /tmp/deps
-            key: ${{ runner.os }}-conan-${{ hashFiles('Frontend/conanfile.txt') }}
+            key: ${{ runner.os }}-conan-cpp23-${{ hashFiles('Frontend/conanfile.txt') }}
             restore-keys: |
               ${{ runner.os }}-conan-
         
@@ -28,17 +37,12 @@ jobs:
           run: |
             sudo apt-get update
             sudo apt-get install -y \
-              clang-tidy-15 \
-              clang-format-15 \
               parallel \
               python3-pip \
-              cmake \
               build-essential \
               wget \
               tar
-            sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-15 100
-            sudo update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-15 100
-            
+        
         - name: Install Conan via pip
           if: steps.conan-cache.outputs.cache-hit != 'true'
           run: |
@@ -50,7 +54,7 @@ jobs:
           run: |
             mkdir -p $HOME/.conan2/profiles
             conan profile detect --name=default --force
-            sed -i 's/compiler.cppstd=.*/compiler.cppstd=20/' $HOME/.conan2/profiles/default
+            sed -i 's/compiler.cppstd=.*/compiler.cppstd=23/' $HOME/.conan2/profiles/default
             cat $HOME/.conan2/profiles/default
         
         - name: Install tgbotstater dependency
@@ -62,19 +66,19 @@ jobs:
             wget https://github.com/Makcal/TgBotStater/archive/refs/tags/v0.3.4.tar.gz
             tar -xvf v0.3.4.tar.gz
             cd TgBotStater-0.3.4
-            conan create . --build=missing -s compiler.cppstd=20
+            conan create . --build=missing
         
         - name: Install project dependencies
           if: steps.conan-cache.outputs.cache-hit != 'true'
           working-directory: .
           run: |
-            conan install . --build=missing -s compiler.cppstd=20
+            conan install . --build=missing
         
         - name: Configure CMake
           working-directory: .
           run: |
             mkdir -p build/Release
-            cmake --preset=conan-release -DCMAKE_CXX_STANDARD=20
+            cmake --preset=conan-release
         
         - name: Build project
           working-directory: .
@@ -90,14 +94,20 @@ jobs:
             fi
             ls -la build/Release/compile_commands.json
         
+        - name: Check tool versions
+          run: |
+            clang-format --version
+            clang-tidy --version
+            cmake --version
+        
         - name: Run clang-format checks
           working-directory: .
           run: |
             find src include -type f \( -name '*.hpp' -or -name '*.cpp' \) \
-              -exec clang-format-15 --dry-run --Werror {} \+
+              -exec clang-format --dry-run --Werror {} \+
         
         - name: Run clang-tidy
           working-directory: .
           run: |
             cd build/Release
-            run-clang-tidy-15 -j$(nproc) -quiet
+            run-clang-tidy -j$(nproc) -quiet
