--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,12 @@ jobs:
         uses: actions/cache@v3
         id: conan-cache
         with:
-          path: ~/.conan2
-          key: ${{ runner.os }}-conan-cpp23-${{ hashFiles('Frontend/conanfile.txt') }}
+          path: |
+            ~/.conan2
+            /tmp/deps
+          key: ${{ runner.os }}-conan-cpp23-${{ hashFiles('Frontend/conanfile.txt') }}-tgbotstater-0.3.4
           restore-keys: |
-            ${{ runner.os }}-conan-
+            ${{ runner.os }}-conan-cpp23-
       
       - name: Install system dependencies
         run: |
@@ -53,6 +55,17 @@ jobs:
           conan profile detect --name=default --force
           sed -i 's/compiler.cppstd=.*/compiler.cppstd=23/' $HOME/.conan2/profiles/default
           cat $HOME/.conan2/profiles/default
+      
+      - name: Install tgbotstater dependency
+        if: steps.conan-cache.outputs.cache-hit != 'true'
+        working-directory: /tmp/deps
+        run: |
+          mkdir -p /tmp/deps
+          cd /tmp/deps
+          wget https://github.com/Makcal/TgBotStater/archive/refs/tags/v0.3.4.tar.gz
+          tar -xvf v0.3.4.tar.gz
+          cd TgBotStater-0.3.4
+          conan create . --build=missing
       
       - name: Install project dependencies
         working-directory: .
