chore: split cpp sources in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,10 @@ message(STATUS "${CMAKE_PROJECT_NAME} version: ${PROJECT_VERSION}")
 # options
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+add_compile_options(-Wall -Wextra)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-if(${CMAKE_BUILD_TYPE} EQUAL "Debug")
-    add_compile_options(-ftime-report -Wall -Wextra)
+if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    # add_compile_options(-ftime-report)
 endif()
 
 # dependencies
@@ -32,23 +33,10 @@ find_package(Boost REQUIRED COMPONENTS json)
 add_executable(main
     src/main.cpp
     src/utils.cpp
-    src/backend/models/storage.cpp
-    src/backend/api/base.cpp
-    src/backend/api/storages.cpp
-    src/handlers/initial/initialStart.cpp
-    src/handlers/storageList/storageListCreate.cpp
-    src/handlers/storageList/storageListDelete.cpp
-    src/handlers/storageList/storageListView.cpp
-    src/handlers/storageView/storageAddDeleteMembers.cpp
-    src/handlers/storageView/storageView.cpp
-    src/handlers/storageView/storageViewMembers.cpp
-    src/render/ingredientsView/ingredientsRender.cpp
-    src/render/storageList/createStorageRender.cpp
-    src/render/storageList/deleteStorageRender.cpp
-    src/render/storageList/storageListRender.cpp
-    src/render/storageView/storageMembersRender.cpp
-    src/render/storageView/storageViewRender.cpp
 )
+include(src/backend/CMakeLists.txt)
+include(src/handlers/CMakeLists.txt)
+include(src/render/CMakeLists.txt)
 
 # setup
 target_include_directories(main PRIVATE
