--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,8 @@
         "variant": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled",
-    "clangd.arguments": ["--cross-file-rename"]
+    "clangd.arguments": [
+        "--cross-file-rename"
+    ],
+    "editor.formatOnSave": true
 }
