--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,12 @@ on:
       - main
       - dev
       - ci
-      
+
 jobs:
-  lint-frontend:
+  build:  # Prepares dependencies and compilation database
     runs-on: ubuntu-latest
+    outputs:
+      cache-hit: ${{ steps.conan-cache.outputs.cache-hit }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -93,20 +95,56 @@ jobs:
           fi
           ls -la build/Release/compile_commands.json
       
-      - name: Check tool versions
-        run: |
-          clang-format --version
-          clang-tidy --version
-          cmake --version
+      - name: Upload compilation database
+        uses: actions/upload-artifact@v3
+        with:
+          name: compilation-db
+          path: build/Release/compile_commands.json
+
+  clang-format-check:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       
-      # - name: Run clang-format checks
-      #   working-directory: .
-      #   run: |
-      #     find src -type f \( -name '*.hpp' -or -name '*.cpp' \) \
-      #       -exec clang-format --dry-run --Werror {} \;
+      - name: Setup clang-format
+        uses: aminya/setup-cpp@v1
+        with:
+          clangformat: true
+          # Skip unnecessary components
+          compiler: none
+          clangtidy: false
+          cmake: false
+      
+      - name: Run clang-format checks
+        run: |
+          find src include -type f \( -name '*.hpp' -or -name '*.cpp' \) \
+            -exec clang-format --dry-run --Werror {} \;
+
+  clang-tidy-check:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Setup clang-tidy
+        uses: aminya/setup-cpp@v1
+        with:
+          clangtidy: true
+          # Skip unnecessary components
+          compiler: none
+          clangformat: false
+          cmake: false
+      
+      - name: Download compilation database
+        uses: actions/download-artifact@v3
+        with:
+          name: compilation-db
+          path: build/Release/
       
       - name: Run clang-tidy
-        working-directory: .
         run: |
           cd build/Release
           run-clang-tidy -j$(nproc) -quiet
