--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,9 @@ on:
       - main
       - dev
       - ci
+
 jobs:
-  build:  # Prepares dependencies and compilation database
+  build:  
     runs-on: ubuntu-latest
     outputs:
       cache-hit: ${{ steps.conan-cache.outputs.cache-hit }}
@@ -107,18 +108,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup clang-format
-        uses: aminya/setup-cpp@v1
-        with:
-          clangformat: true
-          compiler: none
-          clangtidy: false
-          cmake: false
+      - name: Install clang-format
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang-format-19
+          echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
       
       - name: Run clang-format checks
         run: |
           find src include -type f \( -name '*.hpp' -or -name '*.cpp' \) \
-            -exec clang-format --dry-run --Werror {} \;
+            -exec clang-format-19 --dry-run --Werror {} \;
 
   clang-tidy-check:
     runs-on: ubuntu-latest
@@ -127,13 +126,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup clang-tidy
-        uses: aminya/setup-cpp@v1
-        with:
-          clangtidy: true
-          compiler: none
-          clangformat: false
-          cmake: false
+      - name: Install clang-tidy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang-tidy-19
+          echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
       
       - name: Download compilation database
         uses: actions/download-artifact@v4
@@ -144,4 +141,4 @@ jobs:
       - name: Run clang-tidy
         run: |
           cd build/Release
-          run-clang-tidy -j$(nproc) -quiet
+          /usr/lib/llvm-19/bin/run-clang-tidy -j$(nproc) -quiet
