--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
       - dev
-      - ci
 
 jobs:
   build:  
@@ -117,7 +116,7 @@ jobs:
       - name: Run clang-format checks
         run: |
           find src -type f \( -name '*.hpp' -or -name '*.cpp' \) \
-            -exec clang-format-19 --dry-run --Werror {} \;
+            -exec clang-format-19 --dry-run --Werror {} \+
 
   clang-tidy-check:
     runs-on: ubuntu-latest
