--- a/src/backend/CMakeLists.txt
+++ b/src/backend/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(main PRIVATE
     src/backend/models/storage.cpp
+    src/backend/models/user.cpp
     src/backend/api/base.cpp
     src/backend/api/storages.cpp
+    src/backend/api/users.cpp
 )
