--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           path: |
             ~/.conan2
             /tmp/deps
-          key: ${{ runner.os }}-conan-cpp23-${{ hashFiles('Frontend/conanfile.txt') }}-tgbotstater-0.3.4
+          key: ${{ runner.os }}-conan-cpp23-${{ hashFiles('Frontend/conanfile.txt') }}-tgbotstater-0.3.5
           restore-keys: |
             ${{ runner.os }}-conan-cpp23-
       
@@ -64,9 +64,9 @@ jobs:
         run: |
           mkdir -p /tmp/deps
           cd /tmp/deps
-          wget https://github.com/Makcal/TgBotStater/archive/refs/tags/v0.3.4.tar.gz
-          tar -xvf v0.3.4.tar.gz
-          cd TgBotStater-0.3.4
+          wget https://github.com/Makcal/TgBotStater/archive/refs/tags/v0.3.5.tar.gz
+          tar -xf v0.3.5.tar.gz
+          cd TgBotStater-0.3.5
           conan create . --build=missing
       
       - name: Install project dependencies
