ci: fix compiler version property

--- a/.github/actions/build_deps/action.yml
+++ b/.github/actions/build_deps/action.yml
@@ -5,8 +5,7 @@ runs:
       - name: Setup C++ tools
         uses: aminya/setup-cpp@v1
         with:
-          compiler: clang
-          compiler_version: '19'
+          compiler: clang-19
           clangtidy: true
           clangformat: true
           cmake: true
