feat: added storage selection menu

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -5,4 +5,5 @@ target_sources(main PRIVATE
     src/render/storage_list/storage_list_render.cpp
     src/render/storage_view/storage_members_render.cpp
     src/render/storage_view/storage_view_render.cpp
+    src/render/recipe_suggestion/select_storages_render.cpp
 )
