feat: add ingredients search

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -5,4 +5,5 @@ target_sources(main PRIVATE
     src/render/storage_view/storage_members_render.cpp
     src/render/storage_view/storage_view_render.cpp
     src/render/storage_view/ingredients/list.cpp
+    src/render/storage_view/ingredients/search.cpp
 )
