--- a/src/handlers/CMakeLists.txt
+++ b/src/handlers/CMakeLists.txt
@@ -6,4 +6,6 @@ target_sources(main PRIVATE
     src/handlers/storage_view/storage_add_delete_members.cpp
     src/handlers/storage_view/storage_view.cpp
     src/handlers/storage_view/storage_view_members.cpp
+    src/handlers/storage_view/ingredients/list.cpp
+    src/handlers/storage_view/ingredients/search.cpp
 )
