fix: improved linking issues

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -5,5 +5,5 @@ target_sources(main PRIVATE
     src/render/storage_list/storage_list_render.cpp
     src/render/storage_view/storage_members_render.cpp
     src/render/storage_view/storage_view_render.cpp
-    src/render/recipes_suggestion/recipes_suggestion_render
+    src/render/recipes_suggestion/recipes_suggestion_render.cpp
 )
