--- a/src/handlers/CMakeLists.txt
+++ b/src/handlers/CMakeLists.txt
@@ -10,4 +10,5 @@ target_sources(main PRIVATE
     src/handlers/storage_view/ingredients/search.cpp
     src/handlers/recipes_suggestion/storages_select.cpp
     src/handlers/recipes_suggestion/recipes_suggestion_list.cpp
+    src/handlers/recipes_suggestion/recipe_view.cpp
 )
