chore: fix trailing comma in .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,5 +81,5 @@
     "clangd.arguments": [
         "--cross-file-rename"
     ],
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
 }
