--- a/src/handlers/CMakeLists.txt
+++ b/src/handlers/CMakeLists.txt
@@ -1,6 +1,8 @@
 target_sources(main PRIVATE
     src/handlers/initial/initial_start.cpp
 
+    src/handlers/main_menu/main_menu_view.cpp
+
     src/handlers/storage_list/storage_list_create.cpp
     src/handlers/storage_list/storage_list_delete.cpp
     src/handlers/storage_list/storage_list_view.cpp
