feat: private recipes show and paging rework

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -18,4 +18,8 @@ target_sources(main PRIVATE
     src/render/storage_view/members/delete.cpp
     src/render/storage_view/members/view.cpp
     src/render/storage_view/view.cpp
+
+    src/render/custom_recipes_list/view.cpp
+
+    src/render/personal_account/view.cpp
 )
