feat: update storage's ingredient list during the search

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ find_package(Boost REQUIRED COMPONENTS json)
 # main program
 add_executable(main
     src/main.cpp
+    src/states.cpp
     src/utils.cpp
     src/message_tracker.cpp
 )
