feat: create, delete, publish, edit private recipe (w/o backend)

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -20,6 +20,8 @@ target_sources(main PRIVATE
     src/render/storage_view/view.cpp
 
     src/render/custom_recipes_list/view.cpp
+    src/render/custom_recipes_list/create.cpp
+    src/render/custom_recipes_list/custom_recipe/view.cpp
 
     src/render/personal_account/view.cpp
 )
