--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ jobs:
         working-directory: .
         run: |
           make build-release
-
   clang-format-check:
     runs-on: ubuntu-latest
     needs: build
@@ -32,12 +31,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y clang-format-19
           echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
-
       - name: Run clang-format checks
         run: |
           find src -type f \( -name '*.hpp' -or -name '*.cpp' \) \
             -exec clang-format-19 --dry-run --Werror {} \+
-
   clang-tidy-check:
     runs-on: ubuntu-latest
     needs: build
@@ -53,7 +50,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y clang-tidy-19
           echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
-
       - name: Cache clang-tidy results
         uses: actions/cache@v3
         with:
@@ -92,12 +88,15 @@ jobs:
               return 0
             fi
             echo "Linting file: $FILE"
-            # Run clang-tidy without treating warnings as errors
-            if clang-tidy-19 "$FILE" --quiet -p build/Release; then
-              # Write hash to temp file
+            # Run clang-tidy with warnings as errors
+            OUTPUT=$(clang-tidy-19 "$FILE" --quiet --warnings-as-errors='*' -p build/Release 2>&1)
+            STATUS=$?
+            if [ $STATUS -eq 0 ] && ! echo "$OUTPUT" | grep -q "warning:"; then
+              # Write hash to temp file only if no warnings/errors
               echo "{\"$FILE\": \"$HASH\"}" > "$TEMP_FILE"
               return 0
             else
+              echo "$OUTPUT"
               return 1
             fi
           }
@@ -121,7 +120,6 @@ jobs:
           rm -rf "$TEMP_DIR"
           EOF
           chmod +x run-clang-tidy-cached.sh
-
       - name: Run clang-tidy with caching
         run: |
           ./run-clang-tidy-cached.sh
