--- a/.github/actions/build_deps/action.yml
+++ b/.github/actions/build_deps/action.yml
@@ -25,7 +25,7 @@ runs:
         shell: bash
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
+          sudo apt-get install -y --no-install-recommends \
             parallel \
             python3-pip \
             build-essential \
