ci: fix early tremintaion of script becasue of set -e option

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,8 +109,10 @@ jobs:
           export CACHE TEMP_DIR
           # Run linting in parallel with 2 jobs
           cp build/Release/compile_commands.json .
+          set +e
           parallel --jobs $(nproc) lint_file ::: "${FILES[@]}"
           EXIT_STATUS=$?
+          set -e
           # Merge all temp cache files into final cache
           NEW_CACHE=$(mktemp /tmp/clang-tidy-cache-final.XXXXXX.json)
           echo "{}" > "$NEW_CACHE"
